# bagr

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  RELEASE.md  release.toml
.github/workflows/: build.yml  release.yml
src/: lib.rs
src/bagit/: bag.rs  consts.rs  digest.rs  encoding.rs  error.rs  io.rs  mod.rs  tag.rs  validate.rs
tests/: cli_tests.rs
tests/cmd/bag/: bad-src-dst.toml  basic-all-tags.toml  copy-bag.toml  default.toml  default.trycmd  dst-child-of-src.toml  exclude-hidden.toml  include-hidden.toml  invalid-custom-tag.toml  manifest-encoding.toml  multiple-digests.toml  multiple-digests.trycmd
tests/cmd/bag/basic-all-tags.out/: bag-info.txt  tagmanifest-sha512.txt
tests/cmd/bag/copy-bag.out/bag-dst/: bag-info.txt  tagmanifest-sha256.txt
tests/cmd/bag/default.out/: bag-info.txt  manifest-md5.txt  manifest-sha256.txt  tagmanifest-md5.txt  tagmanifest-sha256.txt  tagmanifest-sha512.txt
tests/cmd/bag/dst-child-of-src.out/dst/: tagmanifest-sha256.txt
tests/cmd/bag/exclude-hidden.out/: bag-info.txt  manifest-sha512.txt  tagmanifest-sha512.txt
tests/cmd/bag/include-hidden.out/: bag-info.txt  manifest-sha512.txt  tagmanifest-sha512.txt
tests/cmd/bag/manifest-encoding.in/: test%20file.txt
tests/cmd/bag/manifest-encoding.out/: bag-info.txt  manifest-sha256.txt  tagmanifest-sha256.txt
tests/cmd/bag/manifest-encoding.out/data/: test\nlf.txt
tests/cmd/bag/multiple-digests.out/: bag-info.txt  manifest-blake2b256.txt  tagmanifest-blake2b256.txt  tagmanifest-md5.txt
tests/cmd/rebag/: all-the-options.toml  basic-rebag.toml  new-tag-files.toml  only-tag-changes.toml
tests/cmd/rebag/all-the-options.out/: bag-info.txt  manifest-md5.txt  manifest-sha256.txt  tagmanifest-md5.txt  tagmanifest-sha256.txt
tests/cmd/rebag/basic-rebag.in/: manifest-sha512.txt
tests/cmd/rebag/basic-rebag.out/: bag-info.txt  manifest-sha512.txt  tagmanifest-sha512.txt
tests/cmd/rebag/new-tag-files.in/: bag-info.txt
tests/cmd/rebag/new-tag-files.out/: bag-info.txt  custom-tags.txt  tagmanifest-sha512.txt
tests/cmd/rebag/new-tag-files.out/data/: file1.txt
tests/cmd/rebag/only-tag-changes.in/: bag-info.txt
tests/cmd/rebag/only-tag-changes.out/: bag-info.txt  tagmanifest-sha512.txt
