[package]
name = "bagr"
version = "0.1.0"
edition = "2021"
authors = ["Peter Winckles <pwinckles@pm.me>"]
description = "A CLI for interacting with BagIt bags"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/pwinckles/bagr"
homepage = "https://github.com/pwinckles/bagr"
documentation = "https://docs.rs/bagr/"

[[bin]]
name = "bagr"
path = "src/bin/bagr.rs"

[dependencies]
# Errors
snafu = "0.7"

# Filesystem
walkdir = "2"

# CLI
clap = { version = "3", features = ["derive"] }
ansi_term = "0.12"
ctrlc = "3"
atty = "0.2"

# Logging
log = "0.4"
env_logger = "0.9"
