[package]
name = "bagr"
version = "0.1.0"
edition = "2021"
authors = ["Peter Winckles <pwinckles@pm.me>"]
description = "A CLI for interacting with BagIt bags"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/pwinckles/bagr"
homepage = "https://github.com/pwinckles/bagr"
documentation = "https://docs.rs/bagr/"

[[bin]]
name = "bagr"
path = "src/bin/bagr.rs"

[dependencies]
# Errors
snafu = "0.7"

# Time
chrono = "0.4"

# Enum features
strum = "0.23"
strum_macros = "0.23"

# Filesystem
walkdir = "2"

# Digests
digest = "0.10"
blake2 = "0.10"
hex = "0.4"
md-5 = "0.10"
sha-1 = "0.10"
sha2 = "0.10"

# CLI
clap = { version = "3", features = ["derive"] }
ansi_term = "0.12"
ctrlc = "3"
atty = "0.2"

# Logging
log = "0.4"
env_logger = "0.9"
