[package]
name = "bagr"
version = "0.2.0"
edition = "2021"
authors = ["Peter Winckles <pwinckles@pm.me>"]
description = "A CLI for interacting with BagIt bags"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/pwinckles/bagr"
homepage = "https://github.com/pwinckles/bagr"
documentation = "https://docs.rs/bagr/"

[[bin]]
name = "bagr"
path = "src/bin/bagr.rs"

[profile.release]
strip = true

[dependencies]
# General
chrono = "0.4"
once_cell = "1"
regex = "1"

# Errors
snafu = "0.7"

# Enum features
strum = "0.23"
strum_macros = "0.23"

# Filesystem
walkdir = "2"

# Digests
digest = "0.10"
blake2 = "0.10"
hex = "0.4"
md-5 = "0.10"
sha-1 = "0.10"
sha2 = "0.10"

# CLI
clap = { version = "3", features = ["derive"] }
ansi_term = "0.12"
atty = "0.2"

# Logging
log = "0.4"
env_logger = "0.9"

[dev-dependencies]
trycmd = "0.12"
